Добавлено упрощение работы с городом в API: возможность фильтрации по названию города вместо ID/FIAS. Включены два варианта реализации, включая минимальные изменения и полный отказ от использования FIAS. Обновлена документация API для отражения новых параметров.

--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -2,6 +2,27 @@
 
 - [ ] Включить JWT для `/api/admin/**` при деплое на PROD
 
+## Упрощение работы с городом (по названию вместо ID/FIAS)
+
+Варианты перехода — выбрать один и выполнить чек‑лист.
+
+- [ ] Вариант 1 (минимальный): публичные эндпоинты только по названию
+  - [ ] В `src/Controller/Api/DeliveryPublicController.php` убрать поддержку `cityId`; фильтрацию и кеш‑ключ строить только по `city` (строка)
+  - [ ] В `src/Controller/Api/DeliveryApiController.php` (если используется публичная выдача ПВЗ) убрать ветки с `IDENTITY(p.cityFias)`; фильтровать по `LOWER(TRIM(p.city)) = :city`
+  - [ ] Привести `src/Service/GeoIpService.php` к возврату только `{ cityName }` (без `cityId`)
+  - [ ] Поиск по коду: удалить/игнорировать использование `cityId` в публичных контроллерах и фронте витрины
+  - [ ] Админ‑часть и сущность `Fias` оставить без изменений (используется для справочников), конфликтов с витриной быть не должно
+
+- [ ] Вариант 2 (полный отказ от FIAS в витрине и данных доставки)
+  - [ ] В `src/Entity/PvzPoints.php` и `src/Entity/PvzPrice.php` убрать поле/связь `cityFias` (FK на `fias`), работать только со строковым `city`
+  - [ ] Миграции БД: удалить FK `city_id` из таблиц ПВЗ/тарифов, убедиться в наличии индекса по нормализованному `city` (LOWER(TRIM(city)))
+  - [ ] Обновить контроллеры: везде перейти на фильтр по названию города и кеш по `city`
+  - [ ] Удалить/архивировать `FiasService` и `FiasRepository`; сущность `Fias` и связанные эндпоинты — удалить, если в админке не требуется
+  - [ ] Фронт (витрина): удалить использование `cityId`/`cityKladr` из API вызовов; оставить `cityName`
+  - [ ] Фронт (Admin SPA): привести DTO/репозитории `PvzPointsRepository`/`PvzPriceRepository` к использованию `city` вместо `cityId`
+  - [ ] Миграция данных: при необходимости перенести названия городов из FIAS в строковое поле `city` в ПВЗ/тарифах
+  - [ ] Обновить документацию API (параметры `cityId` — удалить), smoke‑тест публичных эндпоинтов
+
 ## Инструкция для агента (включение JWT на PROD)
 
 1) Включить отдельный firewall для админского API
