Добавлена поддержка пагинации товаров в категории. Реализована логика для обработки параметров лимита и страницы в контроллерах и репозиториях. Обновлены шаблоны для отображения выбранного лимита и навигации по страницам. Улучшена обработка URL для синхронизации состояния фильтров и лимитов. Добавлены новые изображения для товаров.

--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -1,5 +1,13 @@
 # Надо сделать
 
+В админке, когда нажимаем копировать товар, товар копируется, но товары не обновляются. надо сделать обновление списка товаров после успешного копирования.
+
+Когда удаляем фото товара в админке, не надо удалять фото из кеша, потому что оно пропадает у другого товара, если фото добавлено к другому товару.
+
+Надо сделать кнопку прогрева кеша фото, отдельного товара, выбранных товаров.
+
+На странице поиска добавить блок Выбранные фильтры, аналогично как на странице категории.
+
 - [ ] Включить JWT для `/api/admin/**` при деплое на PROD
 
 ## Упрощение работы с городом (по названию вместо ID/FIAS)
