Добавлена поддержка отображения пунктов выдачи на карте в компоненте выбора доставки. Обновлены API функции для получения данных о пунктах выдачи, включая координаты. Реализована логика для отображения карты с пунктами выдачи в интерфейсе, а также обновлены шаблоны для интеграции карты Yandex. Улучшена обработка данных о городе и пунктах выдачи в контроллере оформления заказа.

--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -8,6 +8,8 @@
 
 На странице поиска добавить блок Выбранные фильтры, аналогично как на странице категории.
 
+Цена доставки Рассчет менеджером показывается только на странице оформления заказа, в остальных местах показывает 0
+
 - [ ] Включить JWT для `/api/admin/**` при деплое на PROD
 
 ## Упрощение работы с городом (по названию вместо ID/FIAS)
