Добавлена поддержка пагинации и фильтрации товаров в поиске. Реализована логика для передачи параметров страницы и лимита, а также обновлены шаблоны для отображения выбранных фильтров и результатов поиска. Улучшена обработка начальных фасетов для SSR.

--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -6,9 +6,8 @@
 
 Надо сделать кнопку прогрева кеша фото, отдельного товара, выбранных товаров.
 
-На странице поиска добавить блок Выбранные фильтры, аналогично как на странице категории.
+- [x] На странице поиска добавить блок Выбранные фильтры (SSR + UI), аналогично странице категории.
 
-Цена доставки Рассчет менеджером показывается только на странице оформления заказа, в остальных местах показывает 0
 
 - [ ] Включить JWT для `/api/admin/**` при деплое на PROD
 
