Добавлен новый функционал для пер-товарного прогрева кеша изображений через API и админку. Реализован эндпоинт `POST /api/admin/media/product/{id}/images/warmup` для прогрева кеша, а также добавлена кнопка в админке на странице товара для удобного использования. Обновлена документация и примеры вызовов API.

--- a/docs/Как ускорить сохранение фото в админке.md
+++ b/docs/Как ускорить сохранение фото в админке.md
@@ -82,3 +82,20 @@ async attachProductImages(productId: string | number, relatives: string[]): Prom
 - Важное: замысел контроллера — не греть кэш в рамках запроса, но текущий слушатель это нарушает и даёт задержку. Уберите/асинхронизируйте слушатель — и XHR станет быстрым.
 
 - Изменений в `httpClient` и сети не требуется — задержка на бэкенде.
+
+## Пер-товарный прогрев (UI + API)
+
+Чтобы не блокировать запрос добавления изображений, прогрев вынесен в отдельное действие:
+
+- UI: на странице товара в админке, в блоке «Текущие фото товара», добавлена кнопка «Прогреть кеш фото». Реализация: `assets/admin/components/forms/ProductPhotos.vue`.
+- API: `POST /api/admin/media/product/{id}/images/warmup` — прогревает кэш для всех изображений товара по всем сконфигурированным фильтрам (например, `sm, md, md2, xl`). Реализация: `src/Controller/Admin/MediaAdminController.php` → `warmupProductImages()` с использованием `ImageWarmupService`.
+
+Пример вызова:
+
+```bash
+curl -X POST \
+  -H "Authorization: Bearer <token>" \
+  http://localhost:8000/api/admin/media/product/123/images/warmup
+```
+
+Рекомендация: оставляйте эндпоинт добавления изображений быстрым (без синхронного прогрева), а при необходимости делайте прогрев отдельно через UI/API.
