--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -4,6 +4,8 @@
 
 Когда удаляем фото товара в админке, не надо удалять фото из кеша, потому что оно пропадает у другого товара, если фото добавлено к другому товару.
 
+На странице /checkout/success проверить правильность показа цены доставки, цена 780, а вижу Расчет менеджером.
+
 - [x] На странице поиска добавить блок Выбранные фильтры (SSR + UI), аналогично странице категории.
 
 
