Добавлено описание для внедрения регистрации по email и аутентификации с использованием JWT. Обновлены требования к реализации на стороне бэкенда и фронтенда, включая безопасность, валидацию и обработку токенов. Уточнены детали по контроллерам и маршрутам, а также добавлены рекомендации по конфигурации и тестированию.

--- a/docs/Надо сделать.md
+++ b/docs/Надо сделать.md
@@ -4,7 +4,7 @@
 
 Когда удаляем фото товара в админке, не надо удалять фото из кеша, потому что оно пропадает у другого товара, если фото добавлено к другому товару.
 
-На странице /checkout/success проверить правильность показа цены доставки, цена 780, а вижу Расчет менеджером.
+На странице /checkout/success проверить правильность показа цены доставки, цена 780, а вижу Расчет менеджером. Проблема в том, что если не выбран пункт выдачи, то будет показывать Расчет менеджером.
 
 - [x] На странице поиска добавить блок Выбранные фильтры (SSR + UI), аналогично странице категории.
 
