--- a/docs/Промпт для внедрения авторизации ЧТО НЕ ДОДЕЛАНО.md
+++ b/docs/Промпт для внедрения авторизации ЧТО НЕ ДОДЕЛАНО.md
@@ -1,3 +1,11 @@
+Критические проблемы безопасности
+1. Отсутствие защиты от CSRF
+Нет упоминания CSRF-токенов для форм регистрации/логина
+Риск: атаки через поддельные формы
+Решение: добавить CSRF-защиту для всех POST-запросов
+
+
+
 Вот итоговый аудит внедрения промпта (по пунктам ТЗ).
 
 - Модель/миграции — сделано
